# hbmep-paper

./: .gitignore  LICENSE  Makefile  README.md  README.rst  config.toml  pyproject.toml
LaTeX/: Choice_of_Recruitment_Curves.tex  Default_Model.tex  Extensions_to_Muscles.tex  Group_Model.tex  Implementation.tex  Mixed_Effects.tex  Mixture_model.tex  Modelling_MEP_Size.tex  Within_participant.tex  article.tex  basic-model.tex  mep-size-model.tex
LaTeX/archived/: Modelling_MEP_Size.tex
LaTeX/bits/: Default_Model.tex  Group_Model.tex
LaTeX/manuscript/: sn-jnl.cls
archived/configs/: down2.toml  exp-comparison-3_10_10.toml  experiments.toml  fix.toml  ground_ADM_Biceps.toml  ground_ADM_Biceps_ECR.toml  human_dura.toml  mock.toml  studentT.toml
archived/notebooks/: debug.ipynb  paper-tutorial.ipynb
archived/tms_200/: debug.py  learn_posterior.py  pulses.py  result.py  subjects_exp.py
configs/: J_RCML_000.toml  config.toml  config2.toml  experiments-comparison.toml  experiments-tmux.toml  experiments.toml  gamma_fix.toml  ground_Biceps_ECR.toml  hb-v-nhb.toml  human_midline_lateral.toml  laplace.toml  paper-tutorial.toml  simulation.toml  student_t.toml  student_t_inv.toml
configs/basic-setup/: config.toml
configs/circ/: biceps.toml  deltoid.toml  ecr.toml  fcr.toml
configs/cross-validation/: J_RCML_000.toml  J_RCML_000_full.toml  intraoperative.toml  tms.toml
configs/experiments/: basic_setup.toml  bo.toml  real-time.toml  subjects.toml  tms-power-analysis.toml  tms.toml
configs/human/: biceps.toml  ecr.toml  triceps.toml
configs/intraoperative/: config.toml
configs/multiple-comparisons/: config.toml
configs/rats/: J_RCML_000.toml
configs/rcml/: adm.toml  deltoid.toml  fcr.toml
configs/rcml-non-ground/: biceps.toml
configs/shap/: adm.toml  biceps.toml  deltoid.toml  triceps.toml
configs/shie/: adm.toml  biceps-reverse.toml
configs/shie-orientation/: biceps.toml  flat.toml
configs/simulations/: accuracy.toml  power.toml
configs/simulations-multiple-comparisons/: config.toml
configs/small-large/: biceps.toml  deltoid.toml  fcr.toml
configs/tms/: config.toml
manuscript/: article.tex  bibliography.bib  sn-bibliography.bib  sn-jnl.cls
manuscript/bits/: Implementation.tex  Modelling_MEP_Size.tex  Within_participant.tex
notebooks/: baseline.ipynb  debug.ipynb  paper-tutorial.ipynb  test.py
notebooks/basic-setup/: constants.py  core.py  models.py  sample_data.csv  test.py
notebooks/figures/: constants.py  (+4 more)
(+873 files in other folders)
