[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hbmep_paper"
version = "0.0.1"
authors = [
    { name="Vishweshwar Tyagi, James R. McIntosh", email="vt2353@cumc.columbia.edu" }
]
description = "Results for the hbMEP paper"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "hbmep==0.5.0",
    "numpy==1.24.2",
    "pandas==2.0.2",
    "scikit-learn==1.2.1",
    "jax[cpu]==0.4.24",
    "numpyro[cpu]==0.13.2",
    "arviz==0.18.0",
    "matplotlib==3.7.0",
    "seaborn==0.12.2",
    "joblib==1.3.2",
    "jupyter==1.0.0",
    "mat73==0.60",
    "fastparquet==2023.2.0"
]

[project.urls]
"Homepage" = "https://github.com/hbmep/hbmep-paper"
"Bug Tracker" = "https://github.com/hbmep/hbmep-paper/issues"
